objects/ZonebyChannel__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Zone by Channel</relationshipLabel>
        <relationshipName>Zone_by_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneField__c</fullName>
        <formula>Channel__r.ZoneField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Zone by Channel</relationshipLabel>
        <relationshipName>Zone_by_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoningKey__c</fullName>
        <formula>City__c  &amp; '-'&amp; County__c &amp; '-'&amp; Zip__c &amp; '-'&amp; State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZoningKey</label>
        <type>Text</type>
    </fields>
    <label>Zone by Channel</label>
    <nameField>
        <label>Zone by Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zone by Channel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>